<resources>
    <string name="app_name">Vive 100%</string>
    <string name="txtTitle">Add sale</string>
    <string name="nombre_venta">Name sale</string>
    <string name="btnguardar">Save</string>
    <string name="btnAceptar">Calculate</string>
    <string name="descripcion">Description</string>
    <string name="hint">0</string>
    <string name="pequeno">Small</string>
    <string name="grande">Big</string>
    <string name="saviloe">Saviloe</string>
    <string name="zen">Zen</string>
    <string name="menos">-</string>
    <string name="igual">=</string>
    <string name="cero">0</string>
    <string name="entregadas">Delivered</string>
    <string name="devueltas">Returned</string>
    <string name="vendidas">Sold</string>
    <string name="venta">Sale of the day</string>
    <string name="editarVenta">Edit sale</string>
    <string name="totales">Totals</string>
    <string name="total_venta">Total sale:</string>
    <string name="total_pagar">Total to pay:</string>
    <string name="ganancia">Profits:</string>
    <string name="precios">Product prices</string>
    <string name="btnCancelar">Cancel</string>
    <string name="btnGuardar">Save</string>
    <string name="precio_venta">Sale price</string>
    <string name="precio_costo">Cost price</string>
    <string name="fabBtnEliminar">Yes, delete</string>
    <string name="fabConfirmarEliminar">Sale removed</string>
    <string name="fabBtnCancelar">Cancel</string>
    <string name="fabCerrar">Close</string>
    <string name="recycMsj">Are you sure to delete the sale</string>
    <string name="btnSalirTit">Notice</string>
    <string name="btnYes">Yes</string>
    <string name="btnErroDb">No PRICES table found. Click Menu, Settings.</string>
    <string name="btnErrorMsj">Error opening PRICES database.</string>
    <string name="txtAceptar">OK</string>
    <string name="txtErrorNombreVenta">Write the name of the sale</string>
    <string name="txtGuardando">Saving changes</string>
    <string name="camb_guar">Changes saved</string>
    <string name="error_guardando">Error saving changes. Try again</string>
    <string name="error_cant_peq">Write the amount of the little</string>
    <string name="error_cant_grande">Write the amount of the big</string>
    <string name="error_cant_sav">Write the amount of the saviloe</string>
    <string name="error_cant_zen">Write the amount of the zen</string>
    <string name="error_cant_dev_peq">Write the amount returned for the little one</string>
    <string name="error_cant_dev_grande">Write the returned quantity of large</string>
    <string name="error_cant_dev_sav">Write the returned amount of the saviloe</string>
    <string name="error_cant_dev_zen">Write the returned amount of the zen</string>
    <string name="setting">Setting</string>
    <string name="atras">Back</string>
    <string name="mensaje1">Prices updated successfully.</string>
    <string name="venta_guardada">Sale saved successfully</string>
    <string name="negativo">NO</string>
    <string name="spartan">Spartan</string>
    <string name="error_cant_spa">Write the amount of the spartan</string>
    <string name="error_cant_dev_spartan">Write the amount returned for the spartan</string>
    <string name="hielo">Ice</string>
    <string name="conf_guardar">If you havent saved your data will be lost. Do you really want to get out?</string>
    <string name="ganneto">Profits - Ice</string>
    <string name="borrar">Delete</string>
    <string name="site">Web Site</string>
    <string name="day_loco">Profits + DL</string>
    <string name="txt_position">Button Position</string>
    <string name="txt_custom">Customize</string>
</resources>