<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryDarkColor"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#F80328"
        android:contentDescription="@string/descripcion"
        android:gravity="center"
        android:padding="8dp"
        android:src="@drawable/ic_aviso_24"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/text_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="42dp"
        android:gravity="center"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:text="@string/btnCancelar"
            android:textAllCaps="true"
            android:textColor="@color/primaryTextColor"
            app:strokeColor="@color/primaryTextColor" />

        <Button
            android:id="@+id/btnAceptar"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:text="@string/btnYes"
            android:textAllCaps="true"
            android:textColor="@color/primaryTextColor"
            app:strokeColor="@color/primaryTextColor" />

    </LinearLayout>
</LinearLayout>